--- a/Packages/com.caeden117.udoncoroutines/package.json
+++ b/Packages/com.caeden117.udoncoroutines/package.json
@@ -3,11 +3,14 @@
   "displayName": "Udon Coroutines",
   "version": "0.0.1",
   "unity": "2019.4",
-  "description": "Collection of VRChat Udon scripts that bring basic coroutine functionality to Udon",
+  "description": "Collection of VRChat Udon scripts that bring basic coroutine functionality to Udon.",
   "vrchatVersion": "2022.1.1",
   "author": {
     "name": "Caeden117",
     "email": "caeden.s@outlook.com",
     "url": "https://caeden.dev"
+  },
+  "dependencies": {
+    "com.vrchat.worlds": "3.4.0"
   }
 }
